updated git ignore.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,2 @@
-Javascript/devwa/index.html
-Javascript/devwa/no2.html
-Javascript/devwa/no3.html
-Javascript/devwa/no4.html
-Javascript/devwa/no5.html
-Javascript/devwa/no6.html
-Javascript/doodles/this.js
+Javascript/devwa/*
+Javascript/doodles/*
